<resources>
    <string name="app_name">Piano Master</string>
    <string name="jouer">JOUER</string>
    <string name="tire_choix_du_niveau">Choix du niveau</string>
    <string name="bravo">Bravo !</string>
    <string name="dommage">Dommage !</string>
    <string name="retour_accueil">Retour</string>
    <string name="envoyer">Envoyer</string>
    <string name="score_texte">Vous avez obtenu le score de </string>
    <string name="q_envoyer_resultat">Envoyer le résultat ?</string>
    <string name="sms_contenu">J\'ai fait un score de XX/XX sur le niveau X dans \"Piano Master\" ! Télécharge l\'appli pour me battre !</string>
    <string name="sms_contenu1">J\'ai fait un score de </string>
    <string name="sms_contenu2"> sur le niveau </string>
    <string name="sms_contenu3"> dans \"Piano Master\" ! Télécharge l\'appli pour me battre !</string>
    <string name="recommencer">Réécouter</string>
    <string name="erreurs">Erreurs</string>
    <string name="recommencez">Recommencez</string>
    <string name="chargement_niveau">Téléchargement du nombre de niveaux en cours...</string>
    <string name="sms_envoye">Votre SMS a été envoyé !</string>
    <string name="sms_refuse">"Oh non, votre sms ne s'est pas envoyé\nErreur :"</string>
    <string name="autorisation_sms_oui">"Vous avez autorisé l'envoi de SMS."</string>
    <string name="autorisation_sms_non">Permission SMS refusée.</string>
    <string name="action_ok">Action OK</string>
    <string name="action_canceled">Action annulée</string>
    <string name="action_failed">Action échouée</string>
    <string name="ecoutez_jouez">Écoutez et jouez</string>
    <string name="niveau">Niveau</string>
    <string name="question">question</string>
    <string name="valider">Valider</string>
    <string name="numero">Numéro :</string>
</resources>