<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bleu_fonce">


    <TextView
        android:id="@+id/tv_numero_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Numero : "
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/et_contenu_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_contenu_sms"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="10"
        android:minLines="1"
        android:scrollbars="vertical"
        android:text="@string/sms_contenu"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/b_retour_accueil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_retour_accueil"
        android:layout_width="165dp"
        android:layout_height="75dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/box"
        android:backgroundTint="@color/bleu_clair"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/retour_accueil"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b_envoyer_sms"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_envoyer_sms"
        android:layout_width="165dp"
        android:layout_height="75dp"
        android:background="@drawable/box"
        android:backgroundTint="@color/bleu_clair"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/envoyer"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/b_retour_accueil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b_retour_accueil"
        app:layout_constraintTop_toTopOf="@+id/b_retour_accueil"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_titre_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:padding="8dp"
        android:text="@string/bravo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_contenu_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_numero_tel"
        app:layout_constraintVertical_bias="0.368" />


</androidx.constraintlayout.widget.ConstraintLayout>